# SmartRunML

./: .gitignore  AUTHORS.rst  HISTORY.rst  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  scaler_X.save  scaler_y.save  tox.ini
data/: Activities-6-2-2.csv  Activities-6.csv
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
model/: final_model.pt  k_fold_1.pt  k_fold_2.pt  k_fold_3.pt  k_fold_4.pt  k_fold_5.pt
smartrunml/: CONTRIBUTING.rst  README.rst
smartrunml/.github/: ISSUE_TEMPLATE.md
smartrunml/data/: Activities-6-2-2.csv  Activities-6.csv
smartrunml/docs/: index.rst
smartrunml/src/smartrunml/: __init__.py  main.ipynb  model.py  preprocessing.py  scaler.save  train.py
smartrunml/tests/: __init__.py
src/: main.ipynb  map.py  model.pt  model.py  preprocessing.py  scaler.save  scaler_X.save  scaler_y.save  smart_run_fold_1.pt  smart_run_fold_2.pt  smart_run_fold_3.pt  smart_run_fold_4.pt  smart_run_fold_5.pt  train.py
src/smartrunml/: cli.py  main.ipynb  model.py  preprocessing.py  scaler.save
tests/: test_smartrunml.py
