[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartrunml"
version = "0.1.0"
description = "SmartRunML is a Python package that predicts personalized running plans using Garmin data, weather conditions, and route elevation. The model is trained using a neural network and outputs tailored pace and heart rate recommendations based on the input features."
readme = "README.rst"
authors = [
  {name = "Yian Shih", email = "yi-an.shih@rwth-aachen.de"}
]
maintainers = [
  {name = "Yian Shih", email = "yi-an.shih@rwth-aachen.de"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Ian-stone-shih/smartrunml/issues"
changelog = "https://github.com/Ian-stone-shih/smartrunml/blob/master/changelog.md"
homepage = "https://github.com/Ian-stone-shih/smartrunml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

